Change package to module previously we need to do: from neighlist import neighlist now: import neighlist

--- a/python/Makefile
+++ b/python/Makefile
@@ -12,5 +12,5 @@ clean:
 	python setup.py clean
 clean_all:
 	rm -rf build/ dist/ *.so .cache/ \
-  neighlist/*.pyc neighlist/*.so neighlist.egg-info/ \
+  neighlist.egg-info/ \
   tests/*.pyc tests/*.xyz tests/__pycache__
